// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test initialize saga basic test 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": true,
        "type": "@@loading/loading",
      },
      "channel": null,
    },
  },
}
`;

exports[`test initialize saga basic test 2`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        Object {
          "payload": Object {
            "backlogLevelName": "backlogLevel",
            "projectId": "projectId",
            "teamId": "teamId",
          },
          "type": "@@common/initialize",
        },
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`test initialize saga basic test 3`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": false,
        "type": "@@loading/loading",
      },
      "channel": null,
    },
  },
}
`;

exports[`test initialize saga basic test 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
